<resources>
    <string name="app_name">Study</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="study">Study</string>
    <string name="receiver_s_name">Receiver\'s Name</string>
    <string name="login_tab_title">Login</string>
    <string name="register_tab_title">Register</string>
    <string name="receiver_s_status">Receiver\'s Status</string>
    <string name="tap_to_send">Tap To Send</string>
    <string name="type_a_message">Type a message</string>
    <string name="undo">Undo</string>
    <string name="save">Save</string>
    <string name="color">Color</string>
    <string name="stroke">Stroke</string>
    <string name="decrement">-</string>
    <string name="Increment">+</string>
    <string name="set_value">Set Value</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="there_are_no_secrets_to_success_nit_is_the_result_of_preparation_hard_work_nand_learning_from_failure">“There are no secrets to success.\nIt is the result of preparation, hard work,\nand learning from failure.”</string>
    <string name="enter_code">Enter Code</string>
    <string name="join">Join</string>
    <string name="create">Create</string>
    <string name="share">Share</string>
    <string name="welcome_again">Welcome Again</string>
    <string name="intro">Intro</string>
    <string name="name_data_account">Name:</string>
    <string name="student_id">Student ID:</string>
    <string name="email_data_account">Email:</string>
    <string name="update_profile">Update Profile</string>
    <string name="logout">Logout</string>
    <string name="do_you_really_want_n_to_logout">do you really want\n to logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enhanced_virtual_class">Enhanced Virtual Class</string>
    <string name="prep_work_learn_success">Prep, Work, Learn = Success</string>
    <string name="from">From</string>
    <string name="group_10">Group 10</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="college_info">The college offers undergraduate and postgraduate programs in engineering and management. The undergraduate engineering programs are accredited by the National Board of Accreditation (NBA) and are affiliated with Savitribai Phule Pune University. The postgraduate programs are also affiliated with Savitribai Phule Pune University.</string>
</resources>