<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/amp_blue"
    android:layout_height="match_parent"
    tools:context=".newstudy.WhiteBoard.WhiteBoardFragment">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_undo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_undo"
                android:text="@string/undo"
                android:contentDescription="@string/undo" />

            <ImageButton
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_save_1"
                android:text="@string/save"
                android:contentDescription="@string/save" />

            <ImageButton
                android:id="@+id/btn_color"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_color"
                android:text="@string/color"
                android:contentDescription="@string/color" />

            <ImageButton
                android:id="@+id/btn_stroke"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_brush"
                android:text="@string/stroke"
                android:contentDescription="@string/stroke" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rangebar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />

            <Button
                android:id="@+id/decrement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/decrement"
                android:textSize="20sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/increment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/Increment"
                android:textSize="20sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/strokesize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="Enter Pen Size"
                android:backgroundTint="#FFFFFF"
                android:ems="3"
                android:inputType="number"
                android:textColor="#FFFFFF"
                android:textColorHint="#DADADA"
                android:visibility="gone"
                tools:ignore="LabelFor" />

            <ImageButton
                android:id="@+id/setvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_checked"
                android:visibility="gone"
                android:contentDescription="@string/set_value" />

        </LinearLayout>

    </LinearLayout>

    <com.example.study.newstudy.WhiteBoard.DrawView
        android:id="@+id/draw_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linear"
        android:layout_centerInParent="true"
        android:background="@color/white" />

</RelativeLayout>