<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:foregroundGravity="top"
    app:layout_anchorGravity="top"
    tools:context=".newstudy.MeetFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="275dp"
                android:contentDescription="@string/intro"
                android:src="@drawable/ic_video_call_bro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:text="@string/there_are_no_secrets_to_success_nit_is_the_result_of_preparation_hard_work_nand_learning_from_failure"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <EditText
                android:id="@+id/secretCodeBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="10dp"
                android:autofillHints=""
                android:background="@drawable/textbox"
                android:backgroundTint="#6E6D6D"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_code"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Button
                android:id="@+id/joinBtn"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:drawableEnd="@drawable/videocam"
                android:text="@string/join"
                app:layout_constraintStart_toStartOf="@+id/secretCodeBox"
                app:layout_constraintTop_toBottomOf="@+id/secretCodeBox" />

            <Button
                android:id="@+id/createBtn"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:drawableEnd="@drawable/videocam"
                android:text="@string/create"
                app:layout_constraintEnd_toEndOf="@+id/secretCodeBox"
                app:layout_constraintTop_toBottomOf="@+id/secretCodeBox" />

            <Button
                android:id="@+id/shareBtn"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:backgroundTint="#F0A500"
                android:drawableEnd="@drawable/ic_round_share_24"
                android:text="@string/share"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secretCodeBox" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>