<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="325dp"
    android:layout_height="225dp"
    android:layout_gravity="center"
    android:layout_margin="13dp"
    android:background="@drawable/shape_dialog"
    android:orientation="vertical">

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/circular_background"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logout"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/do_you_really_want_n_to_logout"
        android:textSize="19dp"
        app:fontFamily="sans-serif-medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yesbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/nobtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


</LinearLayout>
