<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newstudy.newstudy.Authentication.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/welcome_again"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            android:textColorHint="#808080"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="Autofill,TouchTargetSizeCheck" />

        <View
            android:id="@+id/viewDividerForEmail"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="#999999"
            app:layout_constraintEnd_toEndOf="@+id/login_email"
            app:layout_constraintStart_toStartOf="@+id/login_email"
            app:layout_constraintTop_toBottomOf="@id/login_email" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/email_icon"
            app:layout_constraintBottom_toBottomOf="@+id/login_email"
            app:layout_constraintStart_toStartOf="@+id/login_email"
            app:layout_constraintTop_toTopOf="@+id/login_email" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="45dp"
            android:background="@null"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            android:textColorHint="#808080"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

        <View
            android:id="@+id/viewDividerForPassword"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="#999999"
            app:layout_constraintEnd_toEndOf="@+id/login_password"
            app:layout_constraintStart_toStartOf="@+id/login_password"
            app:layout_constraintTop_toBottomOf="@id/login_password" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/lock_icon"
            app:layout_constraintBottom_toBottomOf="@+id/login_password"
            app:layout_constraintStart_toStartOf="@+id/login_password"
            app:layout_constraintTop_toTopOf="@+id/login_password" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_visibility"
            app:layout_constraintBottom_toBottomOf="@+id/login_password"
            app:layout_constraintStart_toEndOf="@+id/login_password"
            app:layout_constraintTop_toTopOf="@+id/login_password"
            tools:ignore="TouchTargetSizeCheck" />

        <android.widget.Button
            android:id="@+id/login_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_button"
            android:clickable="true"
            android:text="@string/login_tab_title"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewDividerForPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>